--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -58,6 +58,12 @@
     },
     {
       "path": "./projects/banner-carousel/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/overflow-carousel/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/overflow-carousel/tsconfig.spec.json"
     }
   ],
 }
